--- a/css/header.css
+++ b/css/header.css
@@ -3,10 +3,10 @@
 	width: 100%;
 	height: 64px;
 	position: fixed;
-	background-color: #8029B6;
+	background-color: #00AA00;
 	top: 0;
 	left: 0;
-	box-shadow: 0px 2px 2px 2px #8029B67F;
+	box-shadow: 0px 2px 2px 2px #00AA007F;
 	padding: 5px;
 	overflow: none;
 }
